# libstreams

./: CMakeLists.txt
libs/log/: log.c  log.h
src/: reader.c  reader.h
src/utils/: conv.h
test/: test_reader.c
